<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="spotify_streamer_button">spotify streamer</string>
    <string name="scores_button">scores app</string>
    <string name="library_button">library app</string>
    <string name="build_it_button">build it bigger</string>
    <string name="xyz_reader_button">xyz reader</string>
    <string name="capstone_button">capstone: my own app</string>
    <string name="spotify_streamer_toast">This is my Spotify Streamer App</string>
    <string name="scores_toast">This is my Scores App</string>
    <string name="library_toast">This is my Library App</string>
    <string name="build_it_toast">This is my Build It Bigger App</string>
    <string name="xyz_reader_toast">This is my XYZ Reader App</string>
    <string name="capstone_toast">This is my Capstone App</string>
</resources>
