<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center">



    <TextView
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/spotify_streamer_button"
        android:text="@string/spotify_streamer_button"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/scores_button"
        android:text="@string/scores_button"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/library_button"
        android:text="@string/library_button"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/build_it_button"
        android:text="@string/build_it_button"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/xyz_reader_button"
        android:text="@string/xyz_reader_button"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone_button"
        style="@style/ButtonStyle"
        android:background="#FF0000" />

</LinearLayout>
